# uncertainty

./: README.md  pyproject.toml
data/: apnea_processed.pickle  breastcancer_processed.pickle  compas_arrest_processed.pickle  compas_violent_processed.pickle  mammo_processed.pickle
prm/: calibration.py  cpx_utils.py  cross_validation.py  data.py  disc_classifier.py  disc_mip.py  path_classifier.py  paths.py  training.py  utils.py
scripts/: train_baseline_model.py  train_discrepancy_model.py  train_pathological_models.py
