[project]
name = "uncertainty"
version = "0.1.0"
description = ""
authors = [
    {name = "Amanda Coston", email="mandycoston@gmail.com" },
]
dependencies = [
    "numpy>=1.23.3",
    "matplotlib>=3.7.1",
    "notebook>=6.5.3",
    "scipy>=1.10.1",
    "scikit-learn>=1.3.1",
    "pandas>=2.0.3",
    "cvxpy>=1.4.2",
    "dill>=0.3.8",
]
requires-python = "<3.12,>=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
